@@ -232,3 +232,4 @@ T_383mp4_text_track_subtitles:76381141faab5737c5001b042d4b6235:passed:20121228-2
 T_384vobsub_in_mp4:62fd55de5e9ce07925d710395971a7ae:passed:20130112-201109:0.674617717
 T_385split_parts_frames:14add8af7d016c048f0828708af04a86+c787a3d20fe2c26f7e0e0311f955a281+ok-e1001084ce3512e9dc8940d4c9ade87d+ok-d1c052f274338865a10c8ac6bbd1d1a3+ok-a4401edb1f7c56909267babaaa0e252b+ok-5eaaeb9e142363b1d3abff097b8a93c6+ok:passed:20130114-224502:1.413443333
 T_386flv_vp6f:a0ab8eb0dedf2c8c472e818794c2ad64:passed:20130121-223417:0.187881106
+T_387mp4_free_invalid_size:f3deb6abb3f60c0de606e166353a71b1:passed:20130216-003333:0.04107827
