@@ -1,0 +1,4 @@
+#!/usr/bin/ruby -w
+
+describe "mkvmerge / MP4 atom size too small"
+test_merge "data/mp4/free_invalid_size.mp4"
